fixed mobile layout problems
now the semester picker on the schedule page is inline with the rest of
the things

--- a/Classfinder/Classfinder/Content/Styles/Site/Home/schedule.less
+++ b/Classfinder/Classfinder/Content/Styles/Site/Home/schedule.less
@@ -297,7 +297,7 @@
     #options {
         display:none;
     }
-    #period-name, #student-count {
+    #period-name, #student-count, #semester-chooser {
         width:100%;
         text-align:center;
         margin:0;
